--- a/style.css
+++ b/style.css
@@ -34,9 +34,14 @@ body {
     box-shadow: 7px 7px 5px #eee, -7px -7px 5px #eee;
   }
 
+  section {
+    padding: 10px;
+    width: 100%;  
+  }
+
   @media (max-width:595px) {
     article {
-      width: 95%;
+      width: 90%;
     }
   }
 
@@ -63,15 +68,27 @@ body {
   display: flex;
   flex-wrap: wrap;
   text-align: justify;
-}
-
-section {
+  justify-content: space-between;
   padding: 10px;
-  width: 60%;  
 }
 
+
+.main {
+  width: 59%;
+  min-height:400px;
+  border: 1px solid #212529;
+}
 aside {
-  width: 40%;
-  min-height:100%;
-  background-color: #212529;
+  width: 39%;
+  min-height:400px;
+  border: 1px solid #434E5E;
+}
+@media (max-width:600px)  {
+  .main {
+    width: 100%;
+  }
+  aside {
+    width: 100%;
+    margin-top: 10px;
+  }
 }
