--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     font-family: "Helvetica Neue", Arial, sans-serif;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -19,14 +19,15 @@ body {
   h2 {
     font-size: 1.5em;
     border-bottom: 0.5px solid #434E5E;
+    padding-top: 5px;
     padding-bottom: 5px;
     margin-bottom: 10px;
 
   }
 
   article {
-    width: 595px;
-    min-height: 842px;
+    width: 210mm;
+    height: 297mm;
     background-color: white;
     margin: auto;
     margin-top: 20px;
@@ -34,20 +35,20 @@ body {
     box-shadow: 7px 7px 5px #eee, -7px -7px 5px #eee;
   }
 
-  section {
+  section, aside {
     padding: 10px;
     width: 100%;  
   }
 
-  @media (max-width:595px) {
+  @media (max-width:240mm) {
     article {
-      width: 90%;
+      max-width: 90%;
     }
   }
 
   #myHeader {
     width: 100%;
-    height: 140px;
+    height: 100px;
     background-color:#434E5E ;
     display: flex;
     flex-wrap: wrap;
@@ -57,11 +58,20 @@ body {
 
 .profil {
   margin: 0px;
+  transition: 0.5s ease-in-out;
   -webkit-filter: grayscale(100%);
        -moz-filter: grayscale(100%);
          -o-filter: grayscale(100%);
         -ms-filter: grayscale(100%);
-            filter: grayscale(100%); 
+            filter: grayscale(100%);
+}
+.profil:hover {
+  transform: scale(1.05);
+  -webkit-filter: grayscale(0%);
+       -moz-filter: grayscale(0%);
+         -o-filter: grayscale(0%);
+        -ms-filter: grayscale(0%);
+            filter: grayscale(0%);
 }
 
 .container {
@@ -72,18 +82,23 @@ body {
   padding: 10px;
 }
 
-
 .main {
   width: 59%;
   min-height:400px;
-  border: 1px solid #212529;
+  background-color: #ffe;
 }
+
+.formation, .experience {
+  background-color: #212529;
+  height: 200px;
+}
+
 aside {
   width: 39%;
   min-height:400px;
-  border: 1px solid #434E5E;
+  background-color: #eee;
 }
-@media (max-width:600px)  {
+@media all and (max-width:600px)  {
   .main {
     width: 100%;
   }
@@ -91,4 +106,40 @@ aside {
     width: 100%;
     margin-top: 10px;
   }
+}
+.fi {  transition: 0.5s ease-in-out;}
+.fi:hover {
+  transform: scale(1.5);
+}
+.expertise, .interet {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.interet span {
+  background-color: lightgray;
+  padding: 2px; margin: 3px;
+  border-radius: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.interet span img {
+  vertical-align: middle;
+}
+
+.interet span:hover {
+  color: #eee;
+  background-color: #434E5E;
+  transform: scale(1.1);
+}
+.expertise span {
+  background-color: lightgray;
+  padding: 2px; margin: 3px;
+  border-radius: 10px;
+  transition: 0.2s ease-in-out;
+}
+.expertise span:hover {
+  color: #eee;
+  background-color: #434E5E;
+  transform: scale(1.1);
 }
