--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h2::after {
   position: absolute;
   bottom: 0;
   left: 0;
-  right:0;
+  right: 0;;
   height: 2px;
   transform: scaleX(0);
   background: var(--color4);
@@ -124,16 +124,12 @@ aside {
 
 /* Formations et Expériences*/
 
-.timeline {
-  width:100%;
-  /* background-color: var(--color1); */
-  color: var(--color5);
-}
+.timeline {width:100%;color: var(--color5);}
 .timeline ul {list-style-type:none;border-left:2px solid var(--color3);padding-left: 5px;}
 .timeline ul li {position:relative;cursor:pointer;display: grid;gap: 2px;grid-auto-columns: 1fr;}
-.timeline ul li h3 {color:#34ace0;grid-column: 1 / span 2;grid-row: 1}
-.timeline ul li span {grid-column: 3;grid-row: 1; background-color:var(--color2);color:var(--color1);border-radius:25px;text-align: center; padding-top: 3px;}
+.timeline ul li h3 {color:var(--color4);grid-column: 1 / span 2;grid-row: 1}
+.timeline ul li span {grid-column: 3;grid-row: 1; background-color:var(--color1);color:var(--color3);border-radius:25px;text-align: center; padding-top: 3px;}
 .timeline ul li .content {grid-column: 1 / span 3;grid-row: 2;}
-.timeline ul li:hover {background-color:var(--color1);transition:.5s;} 
-.timeline ul li:before {position:absolute;content:'';width:10px;height:10px;background-color:#34ace0;border-radius:50%;left:-11px;top:25px;transition:.5s;}
+.timeline ul li:hover {background-color:#eee;transition:.5s;} 
+.timeline ul li:before {position:absolute;content:'';width:10px;height:10px;background-color:var(--color3);border-radius:50%;left:-11px;top:25px;transition:.5s;}
 .timeline ul li:hover:before {background-color:#0F0;box-shadow:0px 0px 10px 2px #0F0;} 
